// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing NotFound component should snapshot works with english language 1`] = `
<div>
  <div
    class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthLg"
  >
    <h4
      class="MuiTypography-root Component-root Component-root MuiTypography-h4 MuiTypography-alignCenter"
    >
      Sorry, we couldn't find this page.
    </h4>
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
    >
      The link you followed may be broken or the page may have been removed.
    </p>
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-subtitle2 MuiTypography-colorPrimary"
      data-testid="login-link"
      href="/front/login"
    >
      Back
    </a>
  </div>
</div>
`;

exports[`testing NotFound component should snapshot works with portuguese language 1`] = `
<div>
  <div
    class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthLg"
  >
    <h4
      class="MuiTypography-root Component-root Component-root MuiTypography-h4 MuiTypography-alignCenter"
    >
      Desculpe, não conseguimos encontrar essa página.
    </h4>
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
    >
      O link que você seguiu pode estar quebrado ou a página pode ter sido removida.
    </p>
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-subtitle2 MuiTypography-colorPrimary"
      data-testid="login-link"
      href="/front/login"
    >
      Voltar
    </a>
  </div>
</div>
`;

exports[`testing NotFound component should snapshot works with spanish language 1`] = `
<div>
  <div
    class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthLg"
  >
    <h4
      class="MuiTypography-root Component-root Component-root MuiTypography-h4 MuiTypography-alignCenter"
    >
      Lo sentimos, no pudimos encontrar esta página.
    </h4>
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
    >
      El enlace que siguió puede estar roto o la página puede haber sido eliminada.
    </p>
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-subtitle2 MuiTypography-colorPrimary"
      data-testid="login-link"
      href="/front/login"
    >
      Volver
    </a>
  </div>
</div>
`;
